knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Equity_Membership_St__c/Corporate_Entity_Equity_Membership_St__c.object-meta.xml
<CustomObject>
    <label>Corporate Entity - Equity/ Membership</label>
    <nameField>
        <displayFormat>CE(A)-{000000}</displayFormat>
        <label>Structure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corporate Entity - Equity/ Memberships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>