knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Equity_Membership_St__c/fields/Authorized_Shares__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Shares__c</fullName>
    <label>Authorized Shares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>