knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Equity_Membership_St__c/fields/Corporate_Entity__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account (Corporate Entity)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corporate Entity - Equity/ Memberships</relationshipLabel>
    <relationshipName>Corporate_Entity_Equity_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>