knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Equity_Membership_St__c/fields/Par_Value__c.field-meta.xml
<CustomField>
    <fullName>Par_Value__c</fullName>
    <label>Par Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>$0.00</fullName>
            </value>
            <value>
                <fullName>$0.01</fullName>
            </value>
            <value>
                <fullName>$1.00</fullName>
            </value>
            <value>
                <fullName>$10.00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>