knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Equity_Membership_St__c/recordTypes/Corporate_Entity_Equity_Membership.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Entity_Equity_Membership</fullName>
    <active>true</active>
    <label>Corporate Entity - Equity/ Membership</label>
</RecordType>